break inside avoid

--- a/docroot/sites/all/themes/ambitious/sass/stream.scss
+++ b/docroot/sites/all/themes/ambitious/sass/stream.scss
@@ -12,7 +12,6 @@
         @include breakpoint (min-width $large-mobile) {
             @include columns(2);
             @include column-gap (0px);
-            @include break-inside;
             width: 100%;  
         }
         @include breakpoint (min-width $tablet-small) {
@@ -22,6 +21,7 @@
   .views-row.post {
     //resetting styles from post and applying them to the inside wrapper
     background: transparent;
+    @include break-inside(avoid);
     margin: 0;
     padding: 0;
     border: none;
